Fixed issue where content is cut off on bottom in mobile mode.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -369,10 +369,6 @@ h4 {
     background-color: red;
 }
 
-.side-bar {
-    border-bottom: solid black 1px;
-}
-
 .project-name {
     font-weight: bold;
     font-size: 20px;
@@ -385,6 +381,10 @@ h4 {
 #projects-row {
     display: flex;
     flex-direction: column;
+}
+
+.side-bar {
+    border-bottom: solid black 1px;
 }
 
 .side-bar-label {
@@ -491,6 +491,7 @@ h4 {
     }
 
     .main {
+        height: 100vh;
         flex-direction: row;
     }
 
